<resources>
    <string name="app_name">Discovery Centre</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="help_page">Help Page</string>

    <!-- Right fragment strings-->
    <string name="RoomSchedule">Room Schedule</string>
    <string name="DiscMap">Discovery Centre Map</string>
    <string name="Survey">Survey</string>
    <string name="Help">Help</string>
    <string name="Home">Home</string>

    <!-- Help Messages-->
    <string name="HelpOne">1. If you want to see if a room or station is free, use Room Schedule.</string>
    <string name="HelpTwo">2. If you want to book a room then use Room Booking and login with your Carleton account.</string>
    <string name="HelpThree">3. Check to see if a survey is available by using the Survey button, help us out by giving feedback.</string>
    <string name="HelpFour">4. Click on the Home button to return to the Home Page.</string>

</resources>
