<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="823dp"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:text="@string/help_page"
        android:id="@+id/textView"
        android:padding="25dp"

        android:textColor="#F44336"
        />

    <TextView
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:textSize="30sp"
        android:text="@string/HelpOne"
        android:id="@+id/textView1"
        android:padding="10dp"
        android:layout_marginLeft="15dp"

        android:textColor="#000000"
        />

    <TextView
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:textSize="30sp"
        android:text="@string/HelpTwo"
        android:id="@+id/textView2"
        android:padding="10dp"
        android:layout_marginLeft="15dp"

        android:textColor="#000000"
        />

    <TextView
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:textSize="30sp"
        android:text="@string/HelpThree"
        android:id="@+id/textView3"
        android:padding="10dp"
        android:layout_marginLeft="15dp"

        android:textColor="#000000"
        />

    <TextView
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:textSize="30sp"
        android:text="@string/HelpFour"
        android:id="@+id/textView4"
        android:padding="10dp"
        android:layout_marginLeft="15dp"

        android:textColor="#000000"
        />

</LinearLayout>